--- a/index.html
+++ b/index.html
@@ -49,6 +49,30 @@
       </div>
     </nav>
 
+    <!-- Header -->
+    <header class="header">
+      <!-- Hero -->
+      <div class="hero text-white pt-7">
+        <div class="container-xl">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="img-container mb-5 px-4">
+                <img src="images/header-ebook.png" alt="" class="img-fluid" />
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="text-container p-4 d-flex flex-column justify-content-center h-100 mb-5">
+                <h1 class="display-3 fw-bold">Welcome to Blog Mastery</h1>
+                <p class="lead">
+                  
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
   </body>
