--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                       <input type="email" placeholder="Email Adress" class="form-control form-control-lg rounded-5">
                     </div>
                     <div class="d-grid">
-                      <button class="btn btn-primary text-white">
+                      <button class="btn btn-primary btn-lg text-white">
                         Free Download
                       </button>
                     </div>
