--- a/index.html
+++ b/index.html
@@ -61,17 +61,26 @@
               </div>
             </div>
             <div class="col-md-6">
-              <div class="text-container p-4 d-flex flex-column justify-content-center h-100 mb-5">
+              <div
+                class="text-container p-4 d-flex flex-column justify-content-center h-100 mb-5"
+              >
                 <h1 class="display-3 fw-bold">Welcome to Blog Mastery</h1>
                 <p class="lead">
-                  Are you ready to take your blogging journey to new heights? Blog Mastery is your ultimate guide to creating and managing a successful blog that captivates your audience and drives engagement.
+                  Are you ready to take your blogging journey to new heights?
+                  Blog Mastery is your ultimate guide to creating and managing a
+                  successful blog that captivates your audience and drives
+                  engagement.
                 </p>
 
                 <!-- Form -->
                 <div class="form-container text-center">
-                  <form >
+                  <form>
                     <div class="my-4">
-                      <input type="email" placeholder="Email Adress" class="form-control form-control-lg rounded-5">
+                      <input
+                        type="email"
+                        placeholder="Email Adress"
+                        class="form-control form-control-lg rounded-5"
+                      />
                     </div>
                     <div class="d-grid">
                       <button class="btn btn-primary btn-lg text-white">
@@ -86,28 +95,64 @@
         </div>
       </div>
       <svg
-      class="frame-decoration"
-      data-name="Layer 2"
-      xmlns="http://www.w3.org/2000/svg"
-      preserveAspectRatio="none"
-      viewBox="0 0 1920 192.275"
-    >
-      <defs>
-        <style>
-          .cls-1 {
-            fill: #f3f6f9;
-          }
-        </style>
-      </defs>
-      <title>frame-decoration</title>
-      <path
-        class="cls-1"
-        d="M0,158.755s63.9,52.163,179.472,50.736c121.494-1.5,185.839-49.738,305.984-49.733,109.21,0,181.491,51.733,300.537,50.233,123.941-1.562,225.214-50.126,390.43-50.374,123.821-.185,353.982,58.374,458.976,56.373,217.907-4.153,284.6-57.236,284.6-57.236V351.03H0V158.755Z"
-        transform="translate(0 -158.755)"
-      />
-    </svg>
+        class="frame-decoration"
+        data-name="Layer 2"
+        xmlns="http://www.w3.org/2000/svg"
+        preserveAspectRatio="none"
+        viewBox="0 0 1920 192.275"
+      >
+        <defs>
+          <style>
+            .cls-1 {
+              fill: #f3f6f9;
+            }
+          </style>
+        </defs>
+        <title>frame-decoration</title>
+        <path
+          class="cls-1"
+          d="M0,158.755s63.9,52.163,179.472,50.736c121.494-1.5,185.839-49.738,305.984-49.733,109.21,0,181.491,51.733,300.537,50.233,123.941-1.562,225.214-50.126,390.43-50.374,123.821-.185,353.982,58.374,458.976,56.373,217.907-4.153,284.6-57.236,284.6-57.236V351.03H0V158.755Z"
+          transform="translate(0 -158.755)"
+        />
+      </svg>
     </header>
-
+    <!-- Icons -->
+    <section class="icons bg-light pb-5">
+      <div class="container-xl">
+        <div class="row hstack g-4">
+          <div class="col-md-4 d-flex gap-4">
+            <i class="fas fa-user fa-3x text-primary"></i>
+            <div>
+              <h5 class="fw-bold">Unlock Your Blogging Potential</h5>
+              <p class="text-muted">
+                Discover the key to unleashing your true blogging potential. Our
+                ebook provides expert guidance on creating compelling content
+              </p>
+            </div>
+          </div>
+          <div class="col-md-4 d-flex gap-4">
+            <i class="fas fa-rocket fa-3x text-secondary"></i>
+            <div>
+              <h5 class="fw-bold">Skyrocket Your Blog's Success</h5>
+              <p class="text-muted">
+                Take your blog to new heights with our proven strategies for
+                driving traffic and increasing your blog's visibility.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-4 d-flex gap-4">
+            <i class="fas fa-dollar fa-3x text-primary"></i>
+            <div>
+              <h5 class="fw-muted">Monetize Your Blog</h5>
+              <p class="text-muted">
+                Turn your passion for blogging into a profitable venture. Our
+                ebook reveals tried-and-tested monetization strategies
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
   </body>
