--- a/index.html
+++ b/index.html
@@ -153,6 +153,19 @@
         </div>
       </div>
     </section>
+    <!-- Details -->
+    <section id="details" class="details my-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="text-container d-flex.flex-column.justify-content-center h-100">
+              <h2 class="display-6">Unlock Your Blogging Potential</h2>
+              <p></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
   </body>
